<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />


	<Button
	    android:id="@+id/b1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button1"
		android:onClick="mountText"	/>
	<Button
	    android:id="@+id/b2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button2"
		android:onClick="fsckText"	/>
	<Button
	    android:id="@+id/b3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button3"
		android:onClick="grubText"	/>
	<Button
		android:id="@+id/b4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button4"
		android:onClick="psaxText"	/>
	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/chmodbut"
		android:onClick="chmodCalc" />
</LinearLayout>
